# dgx-mycelium-pipeline-ui

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.runpod  README.md  docker-compose.ocr.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  setup-runpod.sh  start.sh  tsconfig.json
.github/workflows/: build-and-push.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend-dist/: index.html
frontend-dist/assets/: index-Bj8R_q0e.css  index-C5hWy9my.js  index-C6CgPIr4.js  index-Cqij-MuJ.js  index-D7aAF9rE.css
frontend/src/: App.tsx  api.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: capture.rs  lib.rs  main.rs  pipeline.rs  tray.rs
prompts/: extraction.txt  fidelity-reduction.txt
src/: main.ts  types.ts
src/api/: schemas.ts  server.ts  ws.ts
src/config/: index.ts
src/ingestion/: graph-client.ts  graph-poller.ts  graph-types.ts
src/pipeline/: deduplicator.ts  engram-builder.ts  extractor.ts  fidelity-reducer.ts  metrics.ts  ocr.ts  processor.ts  sensitivity-filter.ts
src/queue/: nats-client.ts  topics.ts
src/storage/: audit-store.ts  dead-letter-store.ts  engram-index.ts  muninndb-client.ts  rebuild-index.ts  settings-store.ts  user-store.ts  vault-manager.ts
tests/: types.test.ts
tests/api/: captures.test.ts  health.test.ts  users.test.ts  ws.test.ts
tests/config/: index.test.ts
tests/ingestion/: graph-poller.test.ts
tests/pipeline/: deduplicator.test.ts  engram-builder.test.ts  (+5 more)
(+33 files in other folders)
