[package]
name = "mycelium-desktop"
version = "0.1.0"
description = "Mycelium Desktop — knowledge harvester for your workstation"
authors = []
license = ""
repository = ""
default-run = "mycelium-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mycelium_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mycelium-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-default"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
screenshots = "0.8"
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
